inicio pagina de curiosidade

--- a/pagina-curiosidades.html
+++ b/pagina-curiosidades.html
@@ -31,6 +31,16 @@
     </div>
     <div class="linha"></div>
   </header>
+
+  <section class="curiosidade">
+    <div class="curiosidade-box">
+      <div class="box-curiosidade">
+        Pokémon só exite por que o autor era fã de caçar insetos
+      </div>
+      <div class="box-curiosidade">NOS JOGOS TEMOS 891 POKÉMONS,
+         e mais de mil se considerarmos versões alternativas de mesmas criaturas como as formas de Alola e Galarian.</div>
+    </div>
+  </section>
   <script src="code.js"></script>
 </body>
 
