--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -1,109 +1,126 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Pokédex completa - Descubra e aprenda sobre o mundo Pokémon">
+
+  <!-- Fonts do GoogleFonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&display=swap"
-    rel="stylesheet">
-  <!-- outra fonta -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
-    rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-  <title>Pokedex</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+
+  <!-- Links css -->
+  <link rel="stylesheet" type="text/css" href="reset.css">
+  <link rel="stylesheet" type="text/css" href="header.css">
+  <link rel="stylesheet" type="text/css" href="paginaInicial.css">
+  <link rel="stylesheet" type="text/css" href="pokedex.css">
+
+  <!-- FavIcon -->
+  <link rel="icon" type="image/x-icon" href="./assets/Pokeball_icon.svg">
+
+  <title>Pokédex - Descubra o Mundo Pokémon</title>
 </head>
 
 <body>
-  <header class="header">
+  <!-- Header -->
+  <header class="header" role="banner">
     <div class="container">
-      <div class="container-esquerda">
-        <img class="imagem-poke" src="./assets/pokegif.gif" alt="Pokébola girando">
-        <h1 class="titulo">Pokémon</h1>
-      </div>
+        <div class="container-esquerda">
+            <img class="imagem-poke" src="./assets/pokegif.gif" alt="Pokébola girando">
+            <h1 class="titulo">Pokémon</h1>
+        </div>
 
-      <button class="menu-toggle">☰</button>
+        <button class="menu-toggle" aria-label="Abrir menu">☰</button>
 
-      <div>
-        <nav class="container-direita">
-          <a href="pagina-inicial.html" class="texto ativo">Início</a>
-          <a href="#pokedex">Pokédex</a>
-          <a href="pagina-curiosidades.html">Curiosidades</a>
-          <a href="pagina-game.html">Game</a>
-          <a href="pagina-perfil.html">
-            <img src="./assets/user-round (1).svg" alt="Perfil do usuário">
-          </a>
-        </nav>
-      </div>
+        <nav class="container-direita" role="navigation">
+            <a href="pagina-inicial.html" class="texto ativo">Início</a>
+            <a href="pagina-inicial.html#pokedex" class="texto">Pokédex</a>
+            <a href="pagina-curiosidades.html" class="texto">Curiosidades</a>
+            <a href="pagina-game.html" class="texto">Game</a>
+            <a href="pagina-perfil.html" aria-label="Perfil do Usuário">
+              <img src="./assets/user-round (1).svg" alt="Icone do usuário">
+            </a>
+          </nav>
     </div>
     <div class="linha"></div>
-  </header>
+</header>
+  
+  <!-- Conteúdo Principal -->
+   <main>
+    <section class="inicio" aria-labelledby="título-início">
+      <div class="inicio-conteudo">
+        <h1 class="inicio-titulo" id="titulo-inicio">
+          DESCUBRA, APRENDA E EVOLUA SEUS CONHECIMENTOS SOBRE O MUNDO POKÉMON
+        </h1>
+        <h2 class="inicio-subtitulo">O que é uma Pokédex?</h2>
+        <p class="inicio-texto">
+          Uma Pokédex é uma enciclopédia digital portátil dentro do universo Pokémon
+          que serve para catalogar e fornecer informações detalhadas sobre as diferentes
+          espécies de Pokémon. Criada pelo Professor Carvalho e dada aos treinadores,
+          a Pokédex registra os Pokémon que são vistos ou capturados, exibindo dados como
+          aparência, tipo, habilidades, evoluções e habitat, além de registrar seu número,
+          altura, peso e localização.
+        </p>
+      </div>
+    </section>
+  
+    <!-- Seção Pokédex -->
+    <section class="busca-filtros" id="pokedex" aria-labelledby="titulo-pokedex">
+      <h2 id="titulo-pokedex" class="sr-only">Busca e filtros da Pokédex</h2><!-- Texto para acessibilidade -->
 
-  <section class="inicio">
-    <div class="inicio-conteudo">
-      <h1 class="inicio-titulo">
-        DESCUBRA, APRENDA E EVOLUA SEUS CONHECIMENTOS SOBRE O MUNDO POKÉMON
-      </h1>
-      <h2 class="inicio-subtitulo">O que é uma Pokédex?</h2>
-      <p class="inicio-texto">
-        Uma Pokédex é uma enciclopédia digital portátil dentro do universo Pokémon
-        que serve para catalogar e fornecer informações detalhadas sobre as diferentes
-        espécies de Pokémon. Criada pelo Professor Carvalho e dada aos treinadores,
-        a Pokédex registra os Pokémon que são vistos ou capturados, exibindo dados como
-        aparência, tipo, habilidades, evoluções e habitat, além de registrar seu número,
-        altura, peso e localização.
-      </p>
-    </div>
-  </section>
+      <div class="busca">
+        <input type="text" id="text-busca" placeholder="Buscar pokémon" aria-label="Buscar Pokémon"/>
+      </div>
 
-  <section class="busca-filtros" id="pokedex">
-    <div class="busca">
-      <input type="text" id="text-busca" placeholder="Buscar pokémon"/>
-    </div>
-    <div class="filtros">
-      <select id="filtro-geracao">  
-        <option value="primeira-gen">Primeira Geração</option>
-        <option value="segunda-gen">Segunda Geração</option>
-        <option value="terceira-gen">Terceira Geração</option>
-        <option value="quarta-gen">Quarta Geração</option>
-        <option value="quinta-gen">Quinta Geração</option>
-        <option value="sexta-gen">Sexta Geração</option>
-        <option value="setima-gen">Sétima Geração</option>
-        <option value="oitava-gen">Oitava Geração</option>
-        <option value="nona-gen">Nona Geração</option>
-      </select>
+      <div class="filtros">
+        <select id="filtro-geracao" aria-label="Filtrar por geração">  
+          <option value="primeira-gen">Primeira Geração</option>
+          <option value="segunda-gen">Segunda Geração</option>
+          <option value="terceira-gen">Terceira Geração</option>
+          <option value="quarta-gen">Quarta Geração</option>
+          <option value="quinta-gen">Quinta Geração</option>
+          <option value="sexta-gen">Sexta Geração</option>
+          <option value="setima-gen">Sétima Geração</option>
+          <option value="oitava-gen">Oitava Geração</option>
+          <option value="nona-gen">Nona Geração</option>
+        </select>
 
-      <select name="filtro-tipo">
-        <option value="all">Todos os tipos</option>
-        <option value="normal">Normal</option>
-        <option value="fire">Fogo</option>
-        <option value="water">Água</option>
-        <option value="grass">Planta</option>
-        <option value="flying">Voador</option>
-        <option value="fighting">Lutador</option>
-        <option value="poison">Venenoso</option>
-        <option value="electric">Elétrico</option>
-        <option value="ground">Terra</option>
-        <option value="rock">Pedra</option>
-        <option value="psychic">Psíquico</option>
-        <option value="ice">Gelo</option>
-        <option value="bug">Inseto</option>
-        <option value="ghost">Fantasma</option>
-        <option value="steel">Aço</option>
-        <option value="dragon">Dragão</option>
-        <option value="dark">Sombrio</option>
-        <option value="fairy">Fada</option>
-      </select>
-    </div>
-  </section>
+        <select id="filtro-tipo" aria-label="Filtrar por tipo">
+          <option value="all">Todos os tipos</option>
+          <option value="normal">Normal</option>
+          <option value="fire">Fogo</option>
+          <option value="water">Água</option>
+          <option value="grass">Planta</option>
+          <option value="flying">Voador</option>
+          <option value="fighting">Lutador</option>
+          <option value="poison">Venenoso</option>
+          <option value="electric">Elétrico</option>
+          <option value="ground">Terra</option>
+          <option value="rock">Pedra</option>
+          <option value="psychic">Psíquico</option>
+          <option value="ice">Gelo</option>
+          <option value="bug">Inseto</option>
+          <option value="ghost">Fantasma</option>
+          <option value="steel">Aço</option>
+          <option value="dragon">Dragão</option>
+          <option value="dark">Sombrio</option>
+          <option value="fairy">Fada</option>
+        </select>
+      </div>
+    </section>
 
-  <section class="lista-pokemons" id="lista-pokemons"></section>
+    <!-- Lista de Pokémons -->
+    <section class="lista-pokemons" id="lista-pokemons" aria-live="polite">
+      <!-- Conteúdo gerado pelo JavaScripc -->
+    </section>
 
-  <script src="code.js"></script>
+  </main>
+
+  <!-- Scripts -->
+  <script src="code.js" defer></script>
 </body>
 </html>
