--- a/pagina-curiosidades.html
+++ b/pagina-curiosidades.html
@@ -44,56 +44,59 @@
     </div>
     <div class="linha"></div>
 </header>
-
   <section class="curiosidade">
+    <h2 class="titulo-curiosidade">Curiosidades de Pokémon</h2>
     <div class="curiosidade-box">
-      <div class="trivia">
-        Origem nos Insetos: O criador de Pokémon, Satoshi Tajiri
+      <div class="card-curiosidade">
+        <strong>Origem nos Insetos:</strong> O criador de Pokémon, <stron>Satoshi Tajiri</stron>
         (cujo nome é usado para o personagem Ash em japonês),
         baseou a ideia da franquia em seu hobby de infância de colecionar insetos.
-        Seu rival, Gary, é uma homenagem a Shigeru Miyamoto, criador de Mario.
+        Seu rival, Gary, é uma homenagem a <strong>Shigeru Miyamoto</strong>, criador de Mario.
       </div>
-      <div class="trivia">
-        O Nome do Pikachu: O nome Pikachu vem da combinação de duas onomatopeias japonesas: 
-        "Pika" (som de eletricidade) e "Chu" (som de rato). 
+      <div class="card-curiosidade">
+        <strong>O Nome do Pikachu:</strong> O nome <strong>Pikachu</strong> vem da combinação de duas onomatopeias japonesas: 
+        <strong>"Pika"</strong> (som de eletricidade) e <strong>"Chu"</strong> (som de rato). 
         O design do personagem é, de fato, inspirado em um roedor com poderes elétricos.
       </div>
-      <div class="trivia">
-        Episódio Banido: Um episódio do anime (o de Porygon) causou cerca de 700 convulsões
+      <div class="card-curiosidade">
+        <strong>Episódio Banido:</strong> Um episódio do anime (o de Porygon) causou cerca de 700 convulsões
         em crianças no Japãodevido a luzes intermitentes em alta frequência.
         Desde então, Porygon e suas evoluções raramente aparecem no anime.
       </div>
-      <div class="trivia">
-        Nomes de Lutadores: Os Pokémon lutadores Hitmonlee e Hitmonchan foram nomeados em homenagem
-        aos famosos mestres de kung fu da vida real, Bruce Lee e Jackie Chan, respectivamente.
+      <div class="card-curiosidade">
+        <strong>Nomes de Lutadores:</strong> Os Pokémon lutadores Hitmonlee e Hitmonchan foram nomeados em 
+        homenagem aos famosos mestres de kung fu da vida real,
+        <stronfg>Bruce Lee</stronfg> e <strong>Jackie Chan</strong>, respectivamente.
       </div>
-      <div class="trivia">
-        "Capsule Monsters": O nome original planejado para a franquia era "Capsule Monsters",
-        mas problemas de registro de marca forçaram a mudança para "Pokémon" (abreviação de "Pocket Monsters").
+      <div class="card-curiosidade">
+        <strong>"Capsule Monsters":</strong> O nome original planejado para a franquia era 
+        <strong>"Capsule Monsters"</strong>, mas problemas de registro de marca
+        forçaram a mudança para <strong>"Pokémon"</strong> (abreviação de <strong>"Pocket Monsters"</strong>).
       </div>
-      <div class="trivia">
-        O Primeiro Pokémon Criado: Embora Bulbasaur seja o primeiro na Pokédex,
-        o primeiro Pokémon a ser conceitualmente criado (e projetado) foi Rhydon.
+      <div class="card-curiosidade">
+        <strong>O Primeiro Pokémon Criado:</strong> Embora <strong>Bulbasaur</strong> seja o primeiro na Pokédex,
+        o <strong>primeiro Pokémon</strong> a ser conceitualmente criado (e projetado) foi <strong>Rhydon</strong>.
       </div>
-      <div class="trivia">
-        PETA x Pokémon: O grupo de defesa dos direitos dos animais PETA criou um jogo paródia chamado
+      <div class="card-curiosidade">
+        <strong>PETA x Pokémon:</strong> O grupo de defesa dos direitos dos animais PETA criou um jogo paródia chamado
         "Pokémon: Black & Blue" para protestar contra o que consideravam um tratamento desumano dos animais
         (fictícios) dentro das Pokébolas e em batalhas.
       </div>
-      <div class="trivia">
-        Dinheiro Real com Pokémon: A ilha de Niue,
+      <div class="card-curiosidade">
+        <strong>Dinheiro Real com Pokémon:</strong> A ilha de Niue,
         um pequeno país insular no Pacífico Sul, chegou a produzir moedas de curso legal com imagens
         oficiais de Pokémon, incluindo Pikachu e Mew, em 2001.
       </div>
-      <div class="trivia">
-        O Mapa Incorreto: Na primeira geração de jogos (Red/Blue), o mapa dentro do jogo mostra o
+      <div class="card-curiosidade">
+        <strong>O Mapa Incorreto:</strong> Na primeira geração de jogos (Red/Blue), o mapa dentro do jogo mostra o
         Indigo Plateau na mesma linha de Cerulean, o que é geograficamente incorreto em relação ao mapa
         conceitual. Isso foi um erro devido a limitações de tela do Game Boy original que não foi corrigido
         nas versões ocidentais.
       </div>
-      <div class="trivia">
-        Os Pokémon Mais Pesados: Os Pokémon Cosmoem e Celesteela estão empatados como
-        os mais pesados da franquia, ambos com impressionantes 999,9 quilogramas.
+      <div class="card-curiosidade">
+        <strong>Os Pokémon Mais Pesados:</strong> Os Pokémon <strong>Cosmoem</strong> e <strong>Celesteela</strong>
+        estão empatados como os mais <strong>pesados</strong> da franquia, ambos com impressionantes
+        <strong>999,9 quilogramas.</strong>
       </div>
     </div>
   </section>
