--- a/pagina-curiosidades.html
+++ b/pagina-curiosidades.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
-<html lang="Pt-br">
+<html lang="pt-BR">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Fonts do GoogleFonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Press+Start+2P&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
@@ -23,84 +21,98 @@
 <body>
   <header class="header">
     <div class="container">
-        <div class="container-esquerda">
-            <img class="imagem-poke" src="./assets/pokegif.gif" alt="Pokébola girando">
-            <h1 class="titulo">Pokémon</h1>
-        </div>
+      <div class="container-esquerda">
+        <img class="imagem-poke" src="./assets/pokegif.gif" alt="Pokébola girando">
+        <h1 class="titulo">Pokémon</h1>
+      </div>
 
-        <button class="menu-toggle">☰</button>
+      <button class="menu-toggle">☰</button>
 
-        <div>
-            <nav class="container-direita">
-                <a href="pagina-inicial.html" class="texto">Início</a>
-                <a href="pagina-inicial.html#pokedex">Pokédex</a>
-                <a href="pagina-curiosidades.html" class="texto ativo">Curiosidades</a>
-                <a href="pagina-game.html">Game</a>
-                <a href="pagina-perfil.html">
-                    <img src="./assets/user-round (1).svg" alt="Perfil do usuário">
-                </a>
-            </nav>
-        </div>
+      <div>
+        <nav class="container-direita">
+          <a href="pagina-inicial.html" class="texto">Início</a>
+          <a href="pagina-inicial.html#pokedex">Pokédex</a>
+          <a href="pagina-curiosidades.html" class="texto ativo">Curiosidades</a>
+          <a href="pagina-perfil.html">
+            <img src="./assets/user-round (1).svg" alt="Perfil do usuário">
+          </a>
+        </nav>
+      </div>
     </div>
     <div class="linha"></div>
-</header>
+  </header>
+
   <section class="curiosidade">
     <h2 class="titulo-curiosidade">Curiosidades de Pokémon</h2>
     <div class="curiosidade-box">
+
       <div class="card-curiosidade">
-        <strong>Origem nos Insetos:</strong> O criador de Pokémon, <stron>Satoshi Tajiri</stron>
+        <strong>Origem nos Insetos:</strong> O criador de Pokémon,
+        <strong>Satoshi Tajiri</strong>
         (cujo nome é usado para o personagem Ash em japonês),
         baseou a ideia da franquia em seu hobby de infância de colecionar insetos.
         Seu rival, Gary, é uma homenagem a <strong>Shigeru Miyamoto</strong>, criador de Mario.
       </div>
+
       <div class="card-curiosidade">
-        <strong>O Nome do Pikachu:</strong> O nome <strong>Pikachu</strong> vem da combinação de duas onomatopeias japonesas: 
-        <strong>"Pika"</strong> (som de eletricidade) e <strong>"Chu"</strong> (som de rato). 
-        O design do personagem é, de fato, inspirado em um roedor com poderes elétricos.
+        <strong>O Nome do Pikachu:</strong> O nome <strong>Pikachu</strong> vem da combinação de duas onomatopeias japonesas:
+        <strong>"Pika"</strong> (som de eletricidade) e <strong>"Chu"</strong> (som de rato).
+        O design do personagem é inspirado em um roedor com poderes elétricos.
       </div>
+
       <div class="card-curiosidade">
         <strong>Episódio Banido:</strong> Um episódio do anime (o de Porygon) causou cerca de 700 convulsões
-        em crianças no Japãodevido a luzes intermitentes em alta frequência.
+        em crianças no Japão devido a luzes intermitentes em alta frequência.
         Desde então, Porygon e suas evoluções raramente aparecem no anime.
       </div>
+
       <div class="card-curiosidade">
-        <strong>Nomes de Lutadores:</strong> Os Pokémon lutadores Hitmonlee e Hitmonchan foram nomeados em 
+        <strong>Nomes de Lutadores:</strong> Os Pokémon lutadores Hitmonlee e Hitmonchan foram nomeados em
         homenagem aos famosos mestres de kung fu da vida real,
-        <stronfg>Bruce Lee</stronfg> e <strong>Jackie Chan</strong>, respectivamente.
+        <strong>Bruce Lee</strong> e <strong>Jackie Chan</strong>, respectivamente.
       </div>
+
       <div class="card-curiosidade">
-        <strong>"Capsule Monsters":</strong> O nome original planejado para a franquia era 
+        <strong>"Capsule Monsters":</strong> O nome original planejado para a franquia era
         <strong>"Capsule Monsters"</strong>, mas problemas de registro de marca
         forçaram a mudança para <strong>"Pokémon"</strong> (abreviação de <strong>"Pocket Monsters"</strong>).
       </div>
+
       <div class="card-curiosidade">
         <strong>O Primeiro Pokémon Criado:</strong> Embora <strong>Bulbasaur</strong> seja o primeiro na Pokédex,
-        o <strong>primeiro Pokémon</strong> a ser conceitualmente criado (e projetado) foi <strong>Rhydon</strong>.
+        o <strong>primeiro Pokémon</strong> a ser conceitualmente criado foi <strong>Rhydon</strong>.
       </div>
+
       <div class="card-curiosidade">
         <strong>PETA x Pokémon:</strong> O grupo de defesa dos direitos dos animais PETA criou um jogo paródia chamado
-        "Pokémon: Black & Blue" para protestar contra o que consideravam um tratamento desumano dos animais
+        <strong>Pokémon: Black & Blue</strong> para protestar contra o que consideravam um tratamento desumano dos animais
         (fictícios) dentro das Pokébolas e em batalhas.
       </div>
+
       <div class="card-curiosidade">
         <strong>Dinheiro Real com Pokémon:</strong> A ilha de Niue,
-        um pequeno país insular no Pacífico Sul, chegou a produzir moedas de curso legal com imagens
+        um pequeno país insular no Pacífico Sul, produziu moedas de curso legal com imagens
         oficiais de Pokémon, incluindo Pikachu e Mew, em 2001.
       </div>
+
       <div class="card-curiosidade">
         <strong>O Mapa Incorreto:</strong> Na primeira geração de jogos (Red/Blue), o mapa dentro do jogo mostra o
-        Indigo Plateau na mesma linha de Cerulean, o que é geograficamente incorreto em relação ao mapa
-        conceitual. Isso foi um erro devido a limitações de tela do Game Boy original que não foi corrigido
+        Indigo Plateau na mesma linha de Cerulean, o que é geograficamente incorreto em relação ao mapa conceitual.
+        Isso foi um erro devido a limitações de tela do Game Boy original que não foi corrigido
         nas versões ocidentais.
       </div>
+
       <div class="card-curiosidade">
         <strong>Os Pokémon Mais Pesados:</strong> Os Pokémon <strong>Cosmoem</strong> e <strong>Celesteela</strong>
         estão empatados como os mais <strong>pesados</strong> da franquia, ambos com impressionantes
         <strong>999,9 quilogramas.</strong>
       </div>
+
     </div>
   </section>
+
   <script src="code.js"></script>
+  <script src="header.js"></script>
 </body>
 
 </html>
